--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@common/common": [
-        "libs/common/src"
-      ],
-      "@common/common/*": [
-        "libs/common/src/*"
-      ]
+      "@common/common": ["lib/common/src"],
+      "@common/common/*": ["lib/common/src/*"]
     }
   }
 }
