--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.11.2",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.11.0",
     "@types/uuid": "^9.0.8",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
